Modification entête, pied de page et blade.
Ajout de l'entête et du pied de page dans des vues à part, et de l'inclusion de ceux-ci dans les autres pages.
Modification du code php des pages afin d'utiliser blade.
Remplacement des boucles for par des boucles foreach.

--- a/Application/resources/css/personnalisationducompte.css
+++ b/Application/resources/css/personnalisationducompte.css
@@ -11,7 +11,7 @@ nav
     width: 15%;
     height: 100%;
     position: fixed;
-    box-shadow: 0px 0px 20px #232523;
+    box-shadow: 2px 0px 20px #232523;
 }
 
 nav ul
@@ -55,7 +55,7 @@ nav li
     color: #c2c2c2;
 }
 
-.menu:hover
+.menu:hover, .menu_lateral:hover
 {
     background: #910000;
 }
@@ -63,6 +63,37 @@ nav li
 #personnalisation
 {
     padding-top: 9%;
+}
+
+#menu_lateral
+{
+    background: #002d4b;
+    box-shadow: 0px 0px 0px;
+    visibility: hidden;
+    height: 237px;
+    top: 8.4%;
+    left: 15%;
+    z-index: 1;
+}
+
+#ul_menu_lateral
+{
+    height: 100%;
+}
+
+.li_menu_lateral
+{
+    height: 33.3%;
+}
+
+.menu_lateral
+{
+    text-decoration: none;
+    height: 100%;
+    padding-left: 5%;
+    padding-right: 1%;
+    padding-top: 11.5%;
+    color: #c2c2c2;
 }
 
 header
