--- a/Application/resources/css/accueil.css
+++ b/Application/resources/css/accueil.css
@@ -70,7 +70,7 @@ nav li
     background: #002d4b;
     box-shadow: 0px 0px 0px;
     visibility: hidden;
-    height: 237px;
+    height: 25%/*237px*/;
     top: 8.4%;
     left: 15%;
     z-index: 1;
@@ -103,16 +103,17 @@ header
     color: #c2c2c2;
     display: flex;
 	align-items: center;
+    justify-content: space-between;
     flex-wrap: wrap;
     width: auto;
     margin-left: 15%;
     padding: 2%;
+    text-align: center;
 }
 
 h1
 {
     font-weight: normal;
-    margin-right: 35.95%;
 }
 
 #recherche
@@ -126,34 +127,30 @@ h1
     border-radius: 25px;
 }
 
+#recherche:focus
+{
+    border: 1px #b2b2b2 solid;
+}
+
 #envoyer
 {
     width: 3%;
     position: relative;
-    top: 5px;
+    top: 4px;
     right: 40px;
-}
-
-#nom_deconnexion
-{
-    position: absolute;
-    top: 45px;
-    right: 2%;
-    width: 25%;
 }
 
 #nom_prenom
 {
     position: relative;
     top: 4px;
+    right: 75px;
     float: left;
 }
 
 #deconnexion
 {
     clear: both;
-    position: absolute;
-    right: 0;
 }
 
 #commandes_cours
@@ -178,6 +175,7 @@ body
     margin-left: 15%;
     width: auto;
     padding: 2%;
+    text-align: center;
 }
 
 #message
@@ -278,33 +276,29 @@ textarea
 {
     background: #dd8500;
     color: #ffffff;
-    margin: 0% 33.9% 1% 34%;
+    width: 33%;
+    margin: 0% 33.5% 1% 33.5%;
     padding: 1%;
     border: none;
     border-radius: 5px;
     resize: none;
 }
 
-#label_select
-{
-    margin-left: 38%;
-}
-
 select
 {
-    margin-right: 2%;
+    margin-right: 1%;
+}
+
+#divmodificationlogo
+{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 4%;
 }
 
 #modificationlogo
 {
-    float: left;
-    margin: 0% 2% 4% 30%;
-}
-
-#suppressionlogo
-{
-    clear: right;
-    margin: 0% 0% 4% 0%;
+    margin-right: 2%;
 }
 
 #navlistecomptes
