--- a/Application/resources/css/suivi.css
+++ b/Application/resources/css/suivi.css
@@ -70,7 +70,7 @@ nav li
     background: #002d4b;
     box-shadow: 0px 0px 0px;
     visibility: hidden;
-    height: 237px;
+    height: 25%;
     top: 8.4%;
     left: 15%;
     z-index: 1;
@@ -120,9 +120,15 @@ h1
     background: #2e2e57;
     color: #ffffff;
     border: none;
+    outline: none;
     width: 29.5%;
     padding: 1.6% 6% 1.5% 2%;
     border-radius: 25px;
+}
+
+#recherche:focus
+{
+    border: 1px #b2b2b2 solid;
 }
 
 #envoyer
